<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:text="@string/value_qr_code"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_code"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_disconnect"
            android:text="@string/btn_disconnect"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_scan_hint"
            android:inputType="number"
            style="@style/EditTextStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_scan"
                android:layout_marginEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:text="@string/btn_scan"
                />

            <Button
                android:id="@+id/btn_connect"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:textColor="@color/white"

                android:text="@string/btn_connect"
                />
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity = "center"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/progress"
        />
</LinearLayout>